[metadata]
name = spolks-ping
summary = Simple pure python parallel ping implementation
author = Yury Zaitsau
description-file =
    README.md
classifier =
    License :: OSI Approved :: MIT
    Environment :: Any
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    myping

[entry_points]
console_scripts =
    spolks-ping = myping.bin.ping:main
    spolks-smurf = myping.bin.smurf:main
    spolks-traceroute = myping.bin.tracert:main
