[metadata]
name = icmp-utils
summary = Simple pure python package with bunch of ICMP-based utilities
author = Yury Zaitsau
description-file =
    README.md
classifier =
    License :: OSI Approved :: MIT
    Environment :: Any
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    icmputils

[entry_points]
console_scripts =
    icmputils-ping = icmputils.bin.ping:main
    icmputils-smurf = icmputils.bin.smurf:main
    icmputils-traceroute = icmputils.bin.tracert:main
